# qmutils_fermion_only

./: CMakeLists.txt  LICENSE  README.md  benchmark_result.json
.github/workflows/: benchmark.yml  ci.yml  examples.yml  format-check.yml
benchmark/: CMakeLists.txt  basis-bench.cpp  expression-bench.cpp  lru_cache-bench.cpp  normal_order-bench.cpp  sparse_matrix-bench.cpp  term-bench.cpp
benchmark/qmutils/: utils.h
docs/: Operator.md  README.md
examples/: CMakeLists.txt  canonical_diag.cpp  creutz_ladder.cpp  diatomic_kagome.cpp  dos_utils.h  fourier_transform_1d.cpp  fourier_transform_2d.cpp  frustrated_kagome.cpp  heisenberg_1d.cpp  heisenberg_vmc.cpp  hubbard_1d.cpp  hubbard_1d_mean_field.cpp  kagome.cpp  kagome_scaling.cpp  sawtooth.cpp  square_lattice_landau_level.cpp  ssh_model.cpp  timeintegrator.h
src/: CMakeLists.txt  Expression.h  Operator.cpp  Operator.h  Term.cpp  Term.h  assert.h  basis.cpp  expression.cpp  matrix_elements.cpp  normal_order.cpp  operator.cpp  operator.h  term.cpp  term.h
src/qmutils/: assert.h  basis.h  eigsys.h  expression.h  functional.h  index.h  lru_cache.h  matrix_elements.h  normal_order.h  operator.h  operator_pool.h  sparse_matrix.h  term.h
tests/: CMakeLists.txt  Expression-test.cpp  Operator-test.cpp  Term-test.cpp  basis-test.cpp  expression-test.cpp  foo-test.cpp  foo-test.cpp~  matrix_elements-test.cpp  normal_order-test.cpp  operator-test.cpp  sparse_matrix-test.cpp  term-test.cpp
tools/: format.sh
